tests/sqlcmd/baselines/errors/file_command2.errbaseline
Did not find valid file name in "file" command.
